booking status fix duplicate booking_room fix